// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App renders the app 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#fff",
      "flex": 1,
    }
  }
>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <RNCSafeAreaProvider
      onInsetsChange={[Function]}
      style={
        Array [
          Object {
            "flex": 1,
          },
          undefined,
        ]
      }
    >
      <View
        onLayout={[Function]}
        style={
          Object {
            "flex": 1,
          }
        }
      >
        <View
          pointerEvents="box-none"
          style={
            Object {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        >
          <View
            collapsable={false}
            style={
              Object {
                "opacity": 1,
              }
            }
          />
          <View
            accessibilityElementsHidden={false}
            closing={false}
            gestureVelocityImpact={0.3}
            importantForAccessibility="auto"
            onClose={[Function]}
            onGestureBegin={[Function]}
            onGestureCanceled={[Function]}
            onGestureEnd={[Function]}
            onOpen={[Function]}
            onTransition={[Function]}
            pointerEvents="box-none"
            style={
              Array [
                Object {
                  "overflow": undefined,
                },
                Object {
                  "bottom": 0,
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                },
              ]
            }
            transitionSpec={
              Object {
                "close": Object {
                  "animation": "spring",
                  "config": Object {
                    "damping": 500,
                    "mass": 3,
                    "overshootClamping": true,
                    "restDisplacementThreshold": 10,
                    "restSpeedThreshold": 10,
                    "stiffness": 1000,
                  },
                },
                "open": Object {
                  "animation": "spring",
                  "config": Object {
                    "damping": 500,
                    "mass": 3,
                    "overshootClamping": true,
                    "restDisplacementThreshold": 10,
                    "restSpeedThreshold": 10,
                    "stiffness": 1000,
                  },
                },
              }
            }
          >
            <View
              needsOffscreenAlphaCompositing={false}
              pointerEvents="box-none"
              style={
                Object {
                  "flex": 1,
                  "marginTop": 0,
                }
              }
            >
              <View
                collapsable={false}
                forwardedRef={[Function]}
                onGestureHandlerEvent={[Function]}
                onGestureHandlerStateChange={[Function]}
                style={
                  Object {
                    "flex": 1,
                    "transform": Array [
                      Object {
                        "translateX": 0,
                      },
                      Object {
                        "translateX": 0,
                      },
                    ],
                  }
                }
              >
                <View
                  pointerEvents="none"
                  style={
                    Object {
                      "backgroundColor": "rgb(242, 242, 242)",
                      "bottom": 0,
                      "left": 0,
                      "position": "absolute",
                      "shadowColor": "#000",
                      "shadowOffset": Object {
                        "height": 1,
                        "width": -1,
                      },
                      "shadowOpacity": 0.3,
                      "shadowRadius": 5,
                      "top": 0,
                      "width": 3,
                    }
                  }
                />
                <View
                  style={
                    Array [
                      Object {
                        "flex": 1,
                        "overflow": "hidden",
                      },
                      Array [
                        Object {
                          "backgroundColor": "rgb(242, 242, 242)",
                        },
                        undefined,
                      ],
                    ]
                  }
                >
                  <View
                    style={
                      Object {
                        "flex": 1,
                        "flexDirection": "column-reverse",
                      }
                    }
                  >
                    <View
                      style={
                        Object {
                          "flex": 1,
                        }
                      }
                    >
                      <View
                        style={
                          Object {
                            "backgroundColor": "#F8F9FA",
                            "flexDirection": "column",
                            "height": "100%",
                          }
                        }
                      >
                        <Modal
                          hardwareAccelerated={false}
                          visible={false}
                        >
                          <View
                            style={
                              Object {
                                "backgroundColor": "#1F2532",
                                "bottom": 0,
                                "flex": 1,
                                "left": 0,
                                "position": "absolute",
                                "right": 0,
                                "top": 0,
                              }
                            }
                          >
                            <View
                              style={
                                Object {
                                  "alignItems": "center",
                                  "bottom": 0,
                                  "justifyContent": "center",
                                  "left": 0,
                                  "position": "absolute",
                                  "right": 0,
                                  "top": 0,
                                }
                              }
                            >
                              <ActivityIndicator
                                animating={true}
                                color="#EB576A"
                                hidesWhenStopped={true}
                                size="large"
                                style={
                                  Object {
                                    "flex": 1,
                                  }
                                }
                              />
                            </View>
                          </View>
                        </Modal>
                        <View
                          style={
                            Object {
                              "alignContent": "stretch",
                              "alignItems": "stretch",
                              "backgroundColor": "#F8F9FA",
                              "flexDirection": "column",
                              "height": 354.06976744186045,
                              "justifyContent": "flex-start",
                              "overflow": "hidden",
                              "paddingTop": 30,
                              "width": "100%",
                            }
                          }
                        >
                          <View
                            style={
                              Object {
                                "alignItems": "flex-start",
                                "flexDirection": "row",
                                "flexWrap": "wrap",
                                "justifyContent": "space-between",
                                "paddingTop": 10,
                                "width": "100%",
                                "zIndex": 2,
                              }
                            }
                          >
                            <View
                              style={
                                Object {
                                  "alignItems": "center",
                                  "flexDirection": "row",
                                  "flexWrap": "wrap",
                                  "justifyContent": "flex-end",
                                  "marginLeft": 15,
                                  "marginRight": 15,
                                  "textAlign": "center",
                                }
                              }
                            >
                              <View
                                style={
                                  Object {
                                    "height": 44,
                                    "width": 104.65116279069767,
                                  }
                                }
                              />
                              <View
                                style={
                                  Object {
                                    "height": 44,
                                    "width": 104.65116279069767,
                                  }
                                }
                              />
                            </View>
                          </View>
                          <View
                            style={
                              Object {
                                "flex": 1,
                                "flexDirection": "column",
                                "justifyContent": "flex-end",
                                "left": 0,
                                "position": "absolute",
                                "top": 0,
                              }
                            }
                          >
                            <Image
                              resizeMode="cover"
                              source={
                                Object {
                                  "testUri": "../../../src/assets/images/defaultLogoBackground.png",
                                }
                              }
                              style={
                                Object {
                                  "height": 354.06976744186045,
                                  "width": 750,
                                }
                              }
                            />
                          </View>
                          <View
                            style={
                              Object {
                                "flex": 1,
                                "flexDirection": "column",
                                "justifyContent": "flex-end",
                              }
                            }
                          >
                            <Image
                              resizeMode="contain"
                              source={
                                Object {
                                  "testUri": "../../../src/assets/images/defaultLogo.png",
                                }
                              }
                              style={
                                Object {
                                  "alignSelf": "center",
                                  "bottom": 18.313953488372093,
                                  "maxHeight": 432.29448350459705,
                                  "maxWidth": 650,
                                  "position": "relative",
                                }
                              }
                            />
                          </View>
                        </View>
                        <View
                          style={
                            Object {
                              "backgroundColor": "#F8F9FA",
                              "flex": 1,
                              "flexDirection": "column",
                              "height": "100%",
                            }
                          }
                        >
                          <View
                            style={
                              Object {
                                "flex": 1,
                                "flexDirection": "column",
                                "width": "100%",
                              }
                            }
                          >
                            <RCTScrollView
                              automaticallyAdjustContentInsets={false}
                              contentContainerStyle={
                                Object {
                                  "flexGrow": 1,
                                }
                              }
                              contentData={
                                <View
                                  style={
                                    Object {
                                      "backgroundColor": "#F8F9FA",
                                      "flexDirection": "column",
                                      "height": "100%",
                                    }
                                  }
                                >
                                  <View
                                    style={
                                      Object {
                                        "alignItems": "center",
                                        "justifyContent": "center",
                                        "marginBottom": 61.04651162790697,
                                        "paddingTop": 61.04651162790697,
                                      }
                                    }
                                  >
                                    <Themed.Text
                                      style={
                                        Object {
                                          "alignSelf": "center",
                                          "fontFamily": "IBMPlexSans-SemiBold",
                                          "fontSize": 33.75,
                                          "lineHeight": 43.125,
                                          "textAlign": "center",
                                          "width": "80%",
                                        }
                                      }
                                    >
                                      Welcome to COMPASS
(React Native Client)
                                    </Themed.Text>
                                    <Themed.Text
                                      style={
                                        Object {
                                          "alignSelf": "center",
                                          "color": "#1F2532",
                                          "fontFamily": "IBMPlexSans",
                                          "fontSize": 28.125,
                                          "lineHeight": 37.5,
                                          "marginBottom": 34.883720930232556,
                                          "marginLeft": 69.76744186046511,
                                          "marginRight": 69.76744186046511,
                                          "marginTop": 34.883720930232556,
                                          "textAlign": "center",
                                        }
                                      }
                                    >
                                      This is the Landing Screen.

It can be used to display a welcome message, detailing the following login-process, explaining the handling of personal information, etc.

The logo file (as well as the logoBackground) can be updated by updating the 'CUSTOMIZATION' folder.
                                    </Themed.Text>
                                  </View>
                                  <View
                                    style={
                                      Object {
                                        "flex": 1,
                                        "height": "100%",
                                        "justifyContent": "flex-end",
                                        "marginBottom": 36,
                                        "marginTop": 20,
                                      }
                                    }
                                  >
                                    <ForwardRef
                                      accessibilityHint="Starts login process and redirects to QRCode scanner."
                                      accessibilityLabel="Navigate to Login Screen"
                                      accessibilityRole="button"
                                      onPress={[Function]}
                                      style={
                                        Object {
                                          "alignSelf": "center",
                                          "backgroundColor": "#1F2532",
                                          "borderColor": "#1F2532",
                                          "borderRadius": 50,
                                          "borderWidth": 0,
                                          "bottom": 0,
                                          "padding": 15,
                                          "paddingBottom": 26.162790697674417,
                                          "paddingLeft": 26.162790697674417,
                                          "paddingRight": 26.162790697674417,
                                          "paddingTop": 26.162790697674417,
                                          "width": "80%",
                                        }
                                      }
                                    >
                                      <Themed.Text
                                        style={
                                          Object {
                                            "alignSelf": "center",
                                            "color": "#F8F9FA",
                                            "fontFamily": "IBMPlexSans-SemiBold",
                                            "fontSize": 26.25,
                                            "lineHeight": 35.625,
                                            "textAlign": "center",
                                          }
                                        }
                                      >
                                        Navigate to Login Screen
                                      </Themed.Text>
                                    </ForwardRef>
                                  </View>
                                </View>
                              }
                              contentInset={
                                Object {
                                  "bottom": 0,
                                }
                              }
                              enableAutomaticScroll={true}
                              enableOnAndroid={true}
                              enableResetScrollToCoords={true}
                              extraHeight={75}
                              extraScrollHeight={100}
                              getScrollResponder={[Function]}
                              handleOnScroll={[Function]}
                              innerRef={[Function]}
                              keyboardDismissMode="interactive"
                              keyboardOpeningTime={250}
                              keyboardSpace={0}
                              onScroll={[Function]}
                              resetKeyboardSpace={[Function]}
                              scrollEventThrottle={1}
                              scrollForExtraHeightOnAndroid={[Function]}
                              scrollIntoView={[Function]}
                              scrollToEnd={[Function]}
                              scrollToFocusedInput={[Function]}
                              scrollToPosition={[Function]}
                              showsVerticalScrollIndicator={true}
                              style={
                                Object {
                                  "flex": 1,
                                  "flexDirection": "column",
                                  "width": "100%",
                                }
                              }
                              update={[Function]}
                              viewIsInsideTabBar={false}
                            >
                              <View>
                                <View
                                  style={
                                    Object {
                                      "backgroundColor": "#F8F9FA",
                                      "flexDirection": "column",
                                      "height": "100%",
                                    }
                                  }
                                >
                                  <View
                                    style={
                                      Object {
                                        "alignItems": "center",
                                        "justifyContent": "center",
                                        "marginBottom": 61.04651162790697,
                                        "paddingTop": 61.04651162790697,
                                      }
                                    }
                                  >
                                    <Text
                                      style={
                                        Object {
                                          "alignSelf": "center",
                                          "color": "#242424",
                                          "fontFamily": "IBMPlexSans-SemiBold",
                                          "fontSize": 33.75,
                                          "lineHeight": 43.125,
                                          "textAlign": "center",
                                          "width": "80%",
                                        }
                                      }
                                    >
                                      Welcome to COMPASS
(React Native Client)
                                    </Text>
                                    <Text
                                      style={
                                        Object {
                                          "alignSelf": "center",
                                          "color": "#1F2532",
                                          "fontFamily": "IBMPlexSans",
                                          "fontSize": 28.125,
                                          "lineHeight": 37.5,
                                          "marginBottom": 34.883720930232556,
                                          "marginLeft": 69.76744186046511,
                                          "marginRight": 69.76744186046511,
                                          "marginTop": 34.883720930232556,
                                          "textAlign": "center",
                                        }
                                      }
                                    >
                                      This is the Landing Screen.

It can be used to display a welcome message, detailing the following login-process, explaining the handling of personal information, etc.

The logo file (as well as the logoBackground) can be updated by updating the 'CUSTOMIZATION' folder.
                                    </Text>
                                  </View>
                                  <View
                                    style={
                                      Object {
                                        "flex": 1,
                                        "height": "100%",
                                        "justifyContent": "flex-end",
                                        "marginBottom": 36,
                                        "marginTop": 20,
                                      }
                                    }
                                  >
                                    <View
                                      accessibilityHint="Starts login process and redirects to QRCode scanner."
                                      accessibilityLabel="Navigate to Login Screen"
                                      accessibilityRole="button"
                                      accessible={true}
                                      focusable={true}
                                      onClick={[Function]}
                                      onResponderGrant={[Function]}
                                      onResponderMove={[Function]}
                                      onResponderRelease={[Function]}
                                      onResponderTerminate={[Function]}
                                      onResponderTerminationRequest={[Function]}
                                      onStartShouldSetResponder={[Function]}
                                      style={
                                        Object {
                                          "alignSelf": "center",
                                          "backgroundColor": "#1F2532",
                                          "borderColor": "#1F2532",
                                          "borderRadius": 50,
                                          "borderWidth": 0,
                                          "bottom": 0,
                                          "opacity": 1,
                                          "padding": 15,
                                          "paddingBottom": 26.162790697674417,
                                          "paddingLeft": 26.162790697674417,
                                          "paddingRight": 26.162790697674417,
                                          "paddingTop": 26.162790697674417,
                                          "width": "80%",
                                        }
                                      }
                                    >
                                      <Text
                                        style={
                                          Object {
                                            "alignSelf": "center",
                                            "color": "#F8F9FA",
                                            "fontFamily": "IBMPlexSans-SemiBold",
                                            "fontSize": 26.25,
                                            "lineHeight": 35.625,
                                            "textAlign": "center",
                                          }
                                        }
                                      >
                                        Navigate to Login Screen
                                      </Text>
                                    </View>
                                  </View>
                                </View>
                              </View>
                            </RCTScrollView>
                          </View>
                        </View>
                      </View>
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
      <View
        pointerEvents="box-none"
        style={
          Object {
            "height": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
            "zIndex": 1,
          }
        }
      />
    </RNCSafeAreaProvider>
  </View>
</View>
`;

exports[`App renders the checkin screen 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#F8F9FA",
      "flexDirection": "column",
      "height": "100%",
    }
  }
>
  <Modal
    hardwareAccelerated={false}
    visible={true}
  >
    <View
      style={
        Object {
          "backgroundColor": "#1F2532",
          "bottom": 0,
          "flex": 1,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "bottom": 0,
            "justifyContent": "center",
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      >
        <ActivityIndicator
          animating={true}
          color="#EB576A"
          hidesWhenStopped={true}
          size="large"
          style={
            Object {
              "flex": 1,
            }
          }
        />
      </View>
    </View>
  </Modal>
  <View
    style={
      Object {
        "alignContent": "stretch",
        "alignItems": "stretch",
        "backgroundColor": "#F8F9FA",
        "flexDirection": "column",
        "height": 354.06976744186045,
        "justifyContent": "flex-start",
        "overflow": "hidden",
        "paddingTop": 30,
        "width": "100%",
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "flex-start",
          "flexDirection": "row",
          "flexWrap": "wrap",
          "justifyContent": "space-between",
          "paddingTop": 10,
          "width": "100%",
          "zIndex": 2,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "flexWrap": "wrap",
            "justifyContent": "flex-end",
            "marginLeft": 15,
            "marginRight": 15,
            "textAlign": "center",
          }
        }
      >
        <View
          style={
            Array [
              Object {
                "borderRadius": 3,
                "overflow": "hidden",
              },
              Object {
                "borderRadius": 3,
              },
              undefined,
              false,
            ]
          }
        >
          <View
            accessibilityHint="Re-fetches the questionnaire and status. The current page will be updated."
            accessibilityLabel="refresh"
            accessibilityRole="button"
            accessibilityState={
              Object {
                "busy": false,
                "disabled": false,
              }
            }
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "height": 44,
                "opacity": 1,
                "width": 104.65116279069767,
              }
            }
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "backgroundColor": "transparent",
                  "borderColor": "#2089dc",
                  "borderRadius": 3,
                  "borderWidth": 0,
                  "flexDirection": "row",
                  "justifyContent": "center",
                  "padding": 8,
                }
              }
            >
              <View
                style={
                  Object {
                    "overflow": "hidden",
                  }
                }
              >
                <View>
                  <View
                    style={
                      Object {
                        "alignItems": "center",
                        "backgroundColor": "transparent",
                        "justifyContent": "center",
                      }
                    }
                  >
                    <Text
                      allowFontScaling={false}
                      style={
                        Array [
                          Object {
                            "color": "#EB576A",
                            "fontSize": 48.83720930232558,
                          },
                          Object {
                            "backgroundColor": "transparent",
                          },
                          Object {
                            "fontFamily": "Material Design Icons",
                            "fontStyle": "normal",
                            "fontWeight": "normal",
                          },
                          Object {},
                        ]
                      }
                      testID="iconIcon"
                    >
                      󰑐
                    </Text>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
        <Text
          accessibilityRole="header"
          numberOfLines={1}
          style={
            Object {
              "alignContent": "center",
              "alignSelf": "center",
              "color": "#1F2532",
              "flex": 1,
              "fontFamily": "IBMPlexSans-SemiBold",
              "fontSize": 33.75,
              "lineHeight": 43.125,
              "textAlign": "center",
              "width": "100%",
            }
          }
        >
          Check-In
        </Text>
        <View
          style={
            Array [
              Object {
                "borderRadius": 3,
                "overflow": "hidden",
              },
              Object {
                "borderRadius": 3,
              },
              undefined,
              false,
            ]
          }
        >
          <View
            accessibilityHint="Opens new page with additional informations and links."
            accessibilityLabel="Additional Information"
            accessibilityRole="button"
            accessibilityState={
              Object {
                "busy": false,
                "disabled": false,
              }
            }
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "height": 44,
                "opacity": 1,
                "width": 104.65116279069767,
              }
            }
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "backgroundColor": "transparent",
                  "borderColor": "#2089dc",
                  "borderRadius": 3,
                  "borderWidth": 0,
                  "flexDirection": "row",
                  "justifyContent": "center",
                  "padding": 8,
                }
              }
            >
              <View
                style={
                  Object {
                    "overflow": "hidden",
                  }
                }
              >
                <View>
                  <View
                    style={
                      Object {
                        "alignItems": "center",
                        "backgroundColor": "transparent",
                        "justifyContent": "center",
                      }
                    }
                  >
                    <Text
                      allowFontScaling={false}
                      style={
                        Array [
                          Object {
                            "color": "#EB576A",
                            "fontSize": 48.83720930232558,
                          },
                          Object {
                            "backgroundColor": "transparent",
                          },
                          Object {
                            "fontFamily": "Material Design Icons",
                            "fontStyle": "normal",
                            "fontWeight": "normal",
                          },
                          Object {},
                        ]
                      }
                      testID="iconIcon"
                    >
                      󰍜
                    </Text>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
    <View
      style={
        Object {
          "flex": 1,
          "flexDirection": "column",
          "justifyContent": "flex-end",
          "left": 0,
          "position": "absolute",
          "top": 0,
        }
      }
    >
      <Image
        resizeMode="cover"
        source={
          Object {
            "testUri": "../../../src/assets/images/defaultLogoBackground.png",
          }
        }
        style={
          Object {
            "height": 354.06976744186045,
            "width": 750,
          }
        }
      />
    </View>
    <View
      style={
        Object {
          "flex": 1,
          "flexDirection": "column",
          "justifyContent": "flex-end",
        }
      }
    >
      <Image
        resizeMode="contain"
        source={
          Object {
            "testUri": "../../../src/assets/images/defaultLogo.png",
          }
        }
        style={
          Object {
            "alignSelf": "center",
            "bottom": 13.081395348837209,
            "maxHeight": 308.781773931855,
            "maxWidth": 650,
            "position": "relative",
          }
        }
      />
    </View>
  </View>
  <View
    style={
      Object {
        "backgroundColor": "#F8F9FA",
        "flex": 1,
        "flexDirection": "column",
        "height": "100%",
      }
    }
  >
    <View
      style={
        Object {
          "flex": 1,
          "flexDirection": "column",
          "width": "100%",
        }
      }
    >
      <RCTScrollView
        automaticallyAdjustContentInsets={false}
        contentContainerStyle={
          Object {
            "flexGrow": 1,
          }
        }
        contentData={<View />}
        contentInset={
          Object {
            "bottom": 0,
          }
        }
        enableAutomaticScroll={true}
        enableOnAndroid={true}
        enableResetScrollToCoords={true}
        extraHeight={75}
        extraScrollHeight={100}
        getScrollResponder={[Function]}
        handleOnScroll={[Function]}
        innerRef={[Function]}
        keyboardDismissMode="interactive"
        keyboardOpeningTime={250}
        keyboardSpace={0}
        onScroll={[Function]}
        resetKeyboardSpace={[Function]}
        scrollEventThrottle={1}
        scrollForExtraHeightOnAndroid={[Function]}
        scrollIntoView={[Function]}
        scrollToEnd={[Function]}
        scrollToFocusedInput={[Function]}
        scrollToPosition={[Function]}
        showsVerticalScrollIndicator={true}
        style={
          Object {
            "flex": 1,
            "flexDirection": "column",
            "width": "100%",
          }
        }
        update={[Function]}
        viewIsInsideTabBar={false}
      >
        <View>
          <View />
        </View>
      </RCTScrollView>
    </View>
  </View>
</View>
`;

exports[`App renders the landing screen 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#F8F9FA",
      "flexDirection": "column",
      "height": "100%",
    }
  }
>
  <Modal
    hardwareAccelerated={false}
    visible={true}
  >
    <View
      style={
        Object {
          "backgroundColor": "#1F2532",
          "bottom": 0,
          "flex": 1,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "bottom": 0,
            "justifyContent": "center",
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      >
        <ActivityIndicator
          animating={true}
          color="#EB576A"
          hidesWhenStopped={true}
          size="large"
          style={
            Object {
              "flex": 1,
            }
          }
        />
      </View>
    </View>
  </Modal>
  <View
    style={
      Object {
        "alignContent": "stretch",
        "alignItems": "stretch",
        "backgroundColor": "#F8F9FA",
        "flexDirection": "column",
        "height": 354.06976744186045,
        "justifyContent": "flex-start",
        "overflow": "hidden",
        "paddingTop": 30,
        "width": "100%",
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "flex-start",
          "flexDirection": "row",
          "flexWrap": "wrap",
          "justifyContent": "space-between",
          "paddingTop": 10,
          "width": "100%",
          "zIndex": 2,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "flexWrap": "wrap",
            "justifyContent": "flex-end",
            "marginLeft": 15,
            "marginRight": 15,
            "textAlign": "center",
          }
        }
      >
        <View
          style={
            Object {
              "height": 44,
              "width": 104.65116279069767,
            }
          }
        />
        <View
          style={
            Object {
              "height": 44,
              "width": 104.65116279069767,
            }
          }
        />
      </View>
    </View>
    <View
      style={
        Object {
          "flex": 1,
          "flexDirection": "column",
          "justifyContent": "flex-end",
          "left": 0,
          "position": "absolute",
          "top": 0,
        }
      }
    >
      <Image
        resizeMode="cover"
        source={
          Object {
            "testUri": "../../../src/assets/images/defaultLogoBackground.png",
          }
        }
        style={
          Object {
            "height": 354.06976744186045,
            "width": 750,
          }
        }
      />
    </View>
    <View
      style={
        Object {
          "flex": 1,
          "flexDirection": "column",
          "justifyContent": "flex-end",
        }
      }
    >
      <Image
        resizeMode="contain"
        source={
          Object {
            "testUri": "../../../src/assets/images/defaultLogo.png",
          }
        }
        style={
          Object {
            "alignSelf": "center",
            "bottom": 18.313953488372093,
            "maxHeight": 432.29448350459705,
            "maxWidth": 650,
            "position": "relative",
          }
        }
      />
    </View>
  </View>
  <View
    style={
      Object {
        "backgroundColor": "#F8F9FA",
        "flex": 1,
        "flexDirection": "column",
        "height": "100%",
      }
    }
  >
    <View
      style={
        Object {
          "flex": 1,
          "flexDirection": "column",
          "width": "100%",
        }
      }
    >
      <RCTScrollView
        automaticallyAdjustContentInsets={false}
        contentContainerStyle={
          Object {
            "flexGrow": 1,
          }
        }
        contentData={
          <View
            style={
              Object {
                "backgroundColor": "#F8F9FA",
                "flexDirection": "column",
                "height": "100%",
              }
            }
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "justifyContent": "center",
                  "marginBottom": 61.04651162790697,
                  "paddingTop": 61.04651162790697,
                }
              }
            >
              <Themed.Text
                style={
                  Object {
                    "alignSelf": "center",
                    "fontFamily": "IBMPlexSans-SemiBold",
                    "fontSize": 33.75,
                    "lineHeight": 43.125,
                    "textAlign": "center",
                    "width": "80%",
                  }
                }
              >
                Welcome to COMPASS
(React Native Client)
              </Themed.Text>
              <Themed.Text
                style={
                  Object {
                    "alignSelf": "center",
                    "color": "#1F2532",
                    "fontFamily": "IBMPlexSans",
                    "fontSize": 28.125,
                    "lineHeight": 37.5,
                    "marginBottom": 34.883720930232556,
                    "marginLeft": 69.76744186046511,
                    "marginRight": 69.76744186046511,
                    "marginTop": 34.883720930232556,
                    "textAlign": "center",
                  }
                }
              >
                This is the Landing Screen.

It can be used to display a welcome message, detailing the following login-process, explaining the handling of personal information, etc.

The logo file (as well as the logoBackground) can be updated by updating the 'CUSTOMIZATION' folder.
              </Themed.Text>
            </View>
            <View
              style={
                Object {
                  "flex": 1,
                  "height": "100%",
                  "justifyContent": "flex-end",
                  "marginBottom": 36,
                  "marginTop": 20,
                }
              }
            >
              <ForwardRef
                accessibilityHint="Starts login process and redirects to QRCode scanner."
                accessibilityLabel="Navigate to Login Screen"
                accessibilityRole="button"
                onPress={[Function]}
                style={
                  Object {
                    "alignSelf": "center",
                    "backgroundColor": "#1F2532",
                    "borderColor": "#1F2532",
                    "borderRadius": 50,
                    "borderWidth": 0,
                    "bottom": 0,
                    "padding": 15,
                    "paddingBottom": 26.162790697674417,
                    "paddingLeft": 26.162790697674417,
                    "paddingRight": 26.162790697674417,
                    "paddingTop": 26.162790697674417,
                    "width": "80%",
                  }
                }
              >
                <Themed.Text
                  style={
                    Object {
                      "alignSelf": "center",
                      "color": "#F8F9FA",
                      "fontFamily": "IBMPlexSans-SemiBold",
                      "fontSize": 26.25,
                      "lineHeight": 35.625,
                      "textAlign": "center",
                    }
                  }
                >
                  Navigate to Login Screen
                </Themed.Text>
              </ForwardRef>
            </View>
          </View>
        }
        contentInset={
          Object {
            "bottom": 0,
          }
        }
        enableAutomaticScroll={true}
        enableOnAndroid={true}
        enableResetScrollToCoords={true}
        extraHeight={75}
        extraScrollHeight={100}
        getScrollResponder={[Function]}
        handleOnScroll={[Function]}
        innerRef={[Function]}
        keyboardDismissMode="interactive"
        keyboardOpeningTime={250}
        keyboardSpace={0}
        onScroll={[Function]}
        resetKeyboardSpace={[Function]}
        scrollEventThrottle={1}
        scrollForExtraHeightOnAndroid={[Function]}
        scrollIntoView={[Function]}
        scrollToEnd={[Function]}
        scrollToFocusedInput={[Function]}
        scrollToPosition={[Function]}
        showsVerticalScrollIndicator={true}
        style={
          Object {
            "flex": 1,
            "flexDirection": "column",
            "width": "100%",
          }
        }
        update={[Function]}
        viewIsInsideTabBar={false}
      >
        <View>
          <View
            style={
              Object {
                "backgroundColor": "#F8F9FA",
                "flexDirection": "column",
                "height": "100%",
              }
            }
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "justifyContent": "center",
                  "marginBottom": 61.04651162790697,
                  "paddingTop": 61.04651162790697,
                }
              }
            >
              <Text
                style={
                  Object {
                    "alignSelf": "center",
                    "color": "#242424",
                    "fontFamily": "IBMPlexSans-SemiBold",
                    "fontSize": 33.75,
                    "lineHeight": 43.125,
                    "textAlign": "center",
                    "width": "80%",
                  }
                }
              >
                Welcome to COMPASS
(React Native Client)
              </Text>
              <Text
                style={
                  Object {
                    "alignSelf": "center",
                    "color": "#1F2532",
                    "fontFamily": "IBMPlexSans",
                    "fontSize": 28.125,
                    "lineHeight": 37.5,
                    "marginBottom": 34.883720930232556,
                    "marginLeft": 69.76744186046511,
                    "marginRight": 69.76744186046511,
                    "marginTop": 34.883720930232556,
                    "textAlign": "center",
                  }
                }
              >
                This is the Landing Screen.

It can be used to display a welcome message, detailing the following login-process, explaining the handling of personal information, etc.

The logo file (as well as the logoBackground) can be updated by updating the 'CUSTOMIZATION' folder.
              </Text>
            </View>
            <View
              style={
                Object {
                  "flex": 1,
                  "height": "100%",
                  "justifyContent": "flex-end",
                  "marginBottom": 36,
                  "marginTop": 20,
                }
              }
            >
              <View
                accessibilityHint="Starts login process and redirects to QRCode scanner."
                accessibilityLabel="Navigate to Login Screen"
                accessibilityRole="button"
                accessible={true}
                focusable={true}
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  Object {
                    "alignSelf": "center",
                    "backgroundColor": "#1F2532",
                    "borderColor": "#1F2532",
                    "borderRadius": 50,
                    "borderWidth": 0,
                    "bottom": 0,
                    "opacity": 1,
                    "padding": 15,
                    "paddingBottom": 26.162790697674417,
                    "paddingLeft": 26.162790697674417,
                    "paddingRight": 26.162790697674417,
                    "paddingTop": 26.162790697674417,
                    "width": "80%",
                  }
                }
              >
                <Text
                  style={
                    Object {
                      "alignSelf": "center",
                      "color": "#F8F9FA",
                      "fontFamily": "IBMPlexSans-SemiBold",
                      "fontSize": 26.25,
                      "lineHeight": 35.625,
                      "textAlign": "center",
                    }
                  }
                >
                  Navigate to Login Screen
                </Text>
              </View>
            </View>
          </View>
        </View>
      </RCTScrollView>
    </View>
  </View>
</View>
`;

exports[`App renders the legalinforamtion screen 1`] = `
<View>
  <View
    style={
      Object {
        "backgroundColor": "#F8F9FA",
        "flexDirection": "column",
        "height": "100%",
      }
    }
  >
    <View
      style={
        Object {
          "alignContent": "stretch",
          "alignItems": "stretch",
          "backgroundColor": "#F8F9FA",
          "flexDirection": "column",
          "height": 354.06976744186045,
          "justifyContent": "flex-start",
          "overflow": "hidden",
          "paddingTop": 30,
          "width": "100%",
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "flex-start",
            "flexDirection": "row",
            "flexWrap": "wrap",
            "justifyContent": "space-between",
            "paddingTop": 10,
            "width": "100%",
            "zIndex": 2,
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "flexWrap": "wrap",
              "justifyContent": "flex-end",
              "marginLeft": 15,
              "marginRight": 15,
              "textAlign": "center",
            }
          }
        >
          <View
            style={
              Object {
                "height": 44,
                "width": 104.65116279069767,
              }
            }
          />
          <Text
            accessibilityRole="header"
            numberOfLines={1}
            style={
              Object {
                "alignContent": "center",
                "alignSelf": "center",
                "color": "#1F2532",
                "flex": 1,
                "fontFamily": "IBMPlexSans-SemiBold",
                "fontSize": 33.75,
                "lineHeight": 43.125,
                "textAlign": "center",
                "width": "100%",
              }
            }
          >
            Legal Information Screen
          </Text>
          <View
            style={
              Array [
                Object {
                  "borderRadius": 3,
                  "overflow": "hidden",
                },
                Object {
                  "borderRadius": 3,
                },
                undefined,
                false,
              ]
            }
          >
            <View
              accessibilityHint="Opens new page with additional informations and links."
              accessibilityLabel="Additional Information"
              accessibilityRole="button"
              accessibilityState={
                Object {
                  "busy": false,
                  "disabled": false,
                }
              }
              accessible={true}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "height": 44,
                  "opacity": 1,
                  "width": 104.65116279069767,
                }
              }
            >
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "backgroundColor": "transparent",
                    "borderColor": "#2089dc",
                    "borderRadius": 3,
                    "borderWidth": 0,
                    "flexDirection": "row",
                    "justifyContent": "center",
                    "padding": 8,
                  }
                }
              >
                <View
                  style={
                    Object {
                      "overflow": "hidden",
                    }
                  }
                >
                  <View>
                    <View
                      style={
                        Object {
                          "alignItems": "center",
                          "backgroundColor": "transparent",
                          "justifyContent": "center",
                        }
                      }
                    >
                      <Text
                        allowFontScaling={false}
                        style={
                          Array [
                            Object {
                              "color": "#EB576A",
                              "fontSize": 48.83720930232558,
                            },
                            Object {
                              "backgroundColor": "transparent",
                            },
                            Object {
                              "fontFamily": "Material Design Icons",
                              "fontStyle": "normal",
                              "fontWeight": "normal",
                            },
                            Object {},
                          ]
                        }
                        testID="iconIcon"
                      >
                        󰍜
                      </Text>
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
          <Text
            accessibilityRole="header"
            numberOfLines={1}
            style={
              Object {
                "alignSelf": "center",
                "color": "#1F2532",
                "fontFamily": "IBMPlexSans",
                "fontSize": 30,
                "lineHeight": 39.375,
                "marginBottom": 8.720930232558139,
                "marginTop": -26.162790697674417,
                "position": "relative",
                "textAlign": "center",
                "width": "100%",
              }
            }
          >
            Legal subtitle
          </Text>
        </View>
      </View>
      <View
        style={
          Object {
            "flex": 1,
            "flexDirection": "column",
            "justifyContent": "flex-end",
            "left": 0,
            "position": "absolute",
            "top": 0,
          }
        }
      >
        <Image
          resizeMode="cover"
          source={
            Object {
              "testUri": "../../../src/assets/images/defaultLogoBackground.png",
            }
          }
          style={
            Object {
              "height": 354.06976744186045,
              "width": 750,
            }
          }
        />
      </View>
      <View
        style={
          Object {
            "flex": 1,
            "flexDirection": "column",
            "justifyContent": "flex-end",
          }
        }
      >
        <Image
          resizeMode="contain"
          source={
            Object {
              "testUri": "../../../src/assets/images/defaultLogo.png",
            }
          }
          style={
            Object {
              "alignSelf": "center",
              "bottom": 7.848837209302324,
              "maxHeight": 247.02541914548405,
              "maxWidth": 650,
              "position": "relative",
            }
          }
        />
      </View>
    </View>
    <View
      style={
        Object {
          "backgroundColor": "#F8F9FA",
          "flex": 1,
          "flexDirection": "column",
          "height": "100%",
        }
      }
    >
      <View
        style={
          Object {
            "flex": 1,
            "flexDirection": "column",
            "width": "100%",
          }
        }
      >
        <RCTScrollView
          automaticallyAdjustContentInsets={false}
          contentContainerStyle={
            Object {
              "flexGrow": 1,
            }
          }
          contentData={
            <View
              style={
                Object {
                  "alignItems": "center",
                  "backgroundColor": "#F8F9FA",
                  "flexDirection": "column",
                  "height": "100%",
                  "justifyContent": "center",
                  "marginBottom": 61.04651162790697,
                  "paddingTop": 26.162790697674417,
                }
              }
            >
              <Text
                style={
                  Object {
                    "alignSelf": "center",
                    "fontFamily": "IBMPlexSans-SemiBold",
                    "fontSize": 33.75,
                    "lineHeight": 43.125,
                    "textAlign": "center",
                    "width": "80%",
                  }
                }
              >
                Example Legal Text
              </Text>
              <Text
                style={
                  Object {
                    "alignSelf": "auto",
                    "color": "#1F2532",
                    "fontFamily": "IBMPlexSans",
                    "fontSize": 28.125,
                    "lineHeight": 37.5,
                    "marginBottom": 34.883720930232556,
                    "marginLeft": 69.76744186046511,
                    "marginRight": 69.76744186046511,
                    "marginTop": 34.883720930232556,
                    "textAlign": "justify",
                  }
                }
              >
                DEFINITIONS In this license apply to the interfaces of, the Work is not the case where Apple is the primary copyright notice of copyright, i.e., "Copyright (c) 2001, 2002, 2003, 2004, 2005, 2006 Python Software Foundation; either version 1.3 or later is part of a file documenting the additions, changes or deletions from the Work. If this search is successful, then enquire whether the Work by You alone, not by any Contributor under this Agreement shall terminate as of the following: a) Accompany it with a work which combines Covered Code may contain in whole or in any resulting litigation. Definitions. 1.0.1. "Commercial Use" means distribution or otherwise redistribute the Licensed Product, or for any liability incurred by or claims asserted against, such Contributor as a consequence you may do only in order to apply it to your customers.
					You cannot charge for the Work is distributed to all recipients of Covered Code and executable versions of the Modified Version, and of promoting the sharing and reuse of software distributed under this License. Code" means the original Licensed Product. If you wish while maintaining the availability, integrity, and reliability of that Derived Work under any applicable law.		
					Interpreter' referring to the credit given on this website, or c) through a medium customarily used for display of the Package (7) You may distribute the Source form of the &lt;ORGANIZATION&gt; nor the names of the Source Code. You must duplicate the notice in Exhibit A shall not of themselves be deemed a waiver of future enforcement of that Package while still keeping the Package constitutes direct or contributory patent infringement, then any Derivative Works that You meet the following conditions are met: Redistributions of source code from the Original Code, and keep intact the notices that do not apply to any part thereof, and wants to make the terms applicable to Covered Code. All sublicenses to the work (an example is provided in accordance with the program. It is safest to attach them to the program. It is not confusingly similar phrase do not forfeit any of its terms and conditions of this License, provided that the Program originate from and are distributed by the Licensed Product.		
					This License To use this License which applies to any technical questions or inquiries, or provide any other system and a notice and this permission notice shall be subject to the user community. They therefore concern themselves with the appropriate bodies (for example the POSIX committees). Definitions: "Package" refers to such a notice. If You create or to ask you to surrender the rights.		
					These restrictions translate to certain responsibilities for you to comply with any of the Work that has been certified as open source. It has also been designated as GPL compatible by the Work to which you contribute may be distributed and modified, as well as in related documentation and collateral materials stating that the Program in object code form. This patent license to reproduce, prepare Derivative Works from it. Works" is defined in Article 3 (Restriction) The license granted by this license; they are first used, and the following restrictions: 1.		
					If a component of this License, provided that the Source Code or portions thereof with code not governed by the Contributor, such addition of the Program in a commercial product offering, such Distributor ("Commercial Distributor") hereby agrees to cease use and Distribution of Compiled Forms of the Package, if it fails to comply with the wishes of the software, Licensee agrees to defend claims against the other Contributors related to Product X, those performance claims and warranties, and if a Contributor which are reasonably necessary to make it enforceable. This License complies with the United States and the code itself as a special exception, the source code. And you must rename your license so that distribution is permitted only in or as it is not allowed.		
					You can re-use content from Wikimedia projects freely, with the Licensed Program from such Contributor, if any, must include such Notice in a manner that reasonably allows subsequent Recipients to identify the originator of its Contribution, if any, must include a copy of this License. Artistic License as published by the acts or omissions of such breach; (b) immediately in the copyright notice appear in the name of products derived from the rights conveyed by this License. Provisions which, by their nature, must remain in effect beyond the termination of this License and the following conditions are met: Redistributions of source code as you received as to the Free Software Foundation ("PSF"), and the following disclaimers.		
					Redistributions in source code and object code form. The patent license is also available under the new version. However, only the Licensor or any Contributor, and only if the Program in a commercial product offering, Product X. That Contributor is then produced by applying some process to that Work or a CC-BY-SA-compatible license is granted: 1) for code that you propose to make sure that everyone has such rights, we need to make reasonable conjectures as to name you as the conditions listed in Clause 6 above, in regard to the terms of this Agreement and any Modifications made by someone other than You; and/or (b) to use it for any purpose, but the Licensor or such Contributor (or portions thereof) either on an equitable basis. Nothing herein is intended to facilitate the commercial use of the License published by the parties or the like.
              </Text>
            </View>
          }
          contentInset={
            Object {
              "bottom": 0,
            }
          }
          enableAutomaticScroll={true}
          enableOnAndroid={true}
          enableResetScrollToCoords={true}
          extraHeight={75}
          extraScrollHeight={100}
          getScrollResponder={[Function]}
          handleOnScroll={[Function]}
          innerRef={[Function]}
          keyboardDismissMode="interactive"
          keyboardOpeningTime={250}
          keyboardSpace={0}
          onScroll={[Function]}
          resetKeyboardSpace={[Function]}
          scrollEventThrottle={1}
          scrollForExtraHeightOnAndroid={[Function]}
          scrollIntoView={[Function]}
          scrollToEnd={[Function]}
          scrollToFocusedInput={[Function]}
          scrollToPosition={[Function]}
          showsVerticalScrollIndicator={true}
          style={
            Object {
              "flex": 1,
              "flexDirection": "column",
              "width": "100%",
            }
          }
          update={[Function]}
          viewIsInsideTabBar={false}
        >
          <View>
            <View
              style={
                Object {
                  "alignItems": "center",
                  "backgroundColor": "#F8F9FA",
                  "flexDirection": "column",
                  "height": "100%",
                  "justifyContent": "center",
                  "marginBottom": 61.04651162790697,
                  "paddingTop": 26.162790697674417,
                }
              }
            >
              <Text
                style={
                  Object {
                    "alignSelf": "center",
                    "fontFamily": "IBMPlexSans-SemiBold",
                    "fontSize": 33.75,
                    "lineHeight": 43.125,
                    "textAlign": "center",
                    "width": "80%",
                  }
                }
              >
                Example Legal Text
              </Text>
              <Text
                style={
                  Object {
                    "alignSelf": "auto",
                    "color": "#1F2532",
                    "fontFamily": "IBMPlexSans",
                    "fontSize": 28.125,
                    "lineHeight": 37.5,
                    "marginBottom": 34.883720930232556,
                    "marginLeft": 69.76744186046511,
                    "marginRight": 69.76744186046511,
                    "marginTop": 34.883720930232556,
                    "textAlign": "justify",
                  }
                }
              >
                DEFINITIONS In this license apply to the interfaces of, the Work is not the case where Apple is the primary copyright notice of copyright, i.e., "Copyright (c) 2001, 2002, 2003, 2004, 2005, 2006 Python Software Foundation; either version 1.3 or later is part of a file documenting the additions, changes or deletions from the Work. If this search is successful, then enquire whether the Work by You alone, not by any Contributor under this Agreement shall terminate as of the following: a) Accompany it with a work which combines Covered Code may contain in whole or in any resulting litigation. Definitions. 1.0.1. "Commercial Use" means distribution or otherwise redistribute the Licensed Product, or for any liability incurred by or claims asserted against, such Contributor as a consequence you may do only in order to apply it to your customers.
					You cannot charge for the Work is distributed to all recipients of Covered Code and executable versions of the Modified Version, and of promoting the sharing and reuse of software distributed under this License. Code" means the original Licensed Product. If you wish while maintaining the availability, integrity, and reliability of that Derived Work under any applicable law.		
					Interpreter' referring to the credit given on this website, or c) through a medium customarily used for display of the Package (7) You may distribute the Source form of the &lt;ORGANIZATION&gt; nor the names of the Source Code. You must duplicate the notice in Exhibit A shall not of themselves be deemed a waiver of future enforcement of that Package while still keeping the Package constitutes direct or contributory patent infringement, then any Derivative Works that You meet the following conditions are met: Redistributions of source code from the Original Code, and keep intact the notices that do not apply to any part thereof, and wants to make the terms applicable to Covered Code. All sublicenses to the work (an example is provided in accordance with the program. It is safest to attach them to the program. It is not confusingly similar phrase do not forfeit any of its terms and conditions of this License, provided that the Program originate from and are distributed by the Licensed Product.		
					This License To use this License which applies to any technical questions or inquiries, or provide any other system and a notice and this permission notice shall be subject to the user community. They therefore concern themselves with the appropriate bodies (for example the POSIX committees). Definitions: "Package" refers to such a notice. If You create or to ask you to surrender the rights.		
					These restrictions translate to certain responsibilities for you to comply with any of the Work that has been certified as open source. It has also been designated as GPL compatible by the Work to which you contribute may be distributed and modified, as well as in related documentation and collateral materials stating that the Program in object code form. This patent license to reproduce, prepare Derivative Works from it. Works" is defined in Article 3 (Restriction) The license granted by this license; they are first used, and the following restrictions: 1.		
					If a component of this License, provided that the Source Code or portions thereof with code not governed by the Contributor, such addition of the Program in a commercial product offering, such Distributor ("Commercial Distributor") hereby agrees to cease use and Distribution of Compiled Forms of the Package, if it fails to comply with the wishes of the software, Licensee agrees to defend claims against the other Contributors related to Product X, those performance claims and warranties, and if a Contributor which are reasonably necessary to make it enforceable. This License complies with the United States and the code itself as a special exception, the source code. And you must rename your license so that distribution is permitted only in or as it is not allowed.		
					You can re-use content from Wikimedia projects freely, with the Licensed Program from such Contributor, if any, must include such Notice in a manner that reasonably allows subsequent Recipients to identify the originator of its Contribution, if any, must include a copy of this License. Artistic License as published by the acts or omissions of such breach; (b) immediately in the copyright notice appear in the name of products derived from the rights conveyed by this License. Provisions which, by their nature, must remain in effect beyond the termination of this License and the following conditions are met: Redistributions of source code as you received as to the Free Software Foundation ("PSF"), and the following disclaimers.		
					Redistributions in source code and object code form. The patent license is also available under the new version. However, only the Licensor or any Contributor, and only if the Program in a commercial product offering, Product X. That Contributor is then produced by applying some process to that Work or a CC-BY-SA-compatible license is granted: 1) for code that you propose to make sure that everyone has such rights, we need to make reasonable conjectures as to name you as the conditions listed in Clause 6 above, in regard to the terms of this Agreement and any Modifications made by someone other than You; and/or (b) to use it for any purpose, but the Licensor or such Contributor (or portions thereof) either on an equitable basis. Nothing herein is intended to facilitate the commercial use of the License published by the parties or the like.
              </Text>
            </View>
          </View>
        </RCTScrollView>
      </View>
    </View>
  </View>
</View>
`;

exports[`App renders the survey screen 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#F8F9FA",
      "flex": 1,
      "flexDirection": "column",
    }
  }
>
  <View
    style={
      Object {
        "alignContent": "stretch",
        "alignItems": "stretch",
        "backgroundColor": "#F8F9FA",
        "flexDirection": "column",
        "height": 354.06976744186045,
        "justifyContent": "flex-start",
        "overflow": "hidden",
        "paddingTop": 30,
        "width": "100%",
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "flex-start",
          "flexDirection": "row",
          "flexWrap": "wrap",
          "justifyContent": "space-between",
          "paddingTop": 10,
          "width": "100%",
          "zIndex": 2,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "flexWrap": "wrap",
            "justifyContent": "flex-end",
            "marginLeft": 15,
            "marginRight": 15,
            "textAlign": "center",
          }
        }
      >
        <View
          style={
            Object {
              "height": 44,
              "width": 104.65116279069767,
            }
          }
        />
        <Text
          accessibilityRole="header"
          numberOfLines={1}
          style={
            Object {
              "alignContent": "center",
              "alignSelf": "center",
              "color": "#1F2532",
              "flex": 1,
              "fontFamily": "IBMPlexSans-SemiBold",
              "fontSize": 33.75,
              "lineHeight": 43.125,
              "textAlign": "center",
              "width": "100%",
            }
          }
        >
          Questionnaire
        </Text>
        <View
          style={
            Array [
              Object {
                "borderRadius": 3,
                "overflow": "hidden",
              },
              Object {
                "borderRadius": 3,
              },
              undefined,
              false,
            ]
          }
        >
          <View
            accessibilityHint="Opens new page with additional informations and links."
            accessibilityLabel="Additional Information"
            accessibilityRole="button"
            accessibilityState={
              Object {
                "busy": false,
                "disabled": false,
              }
            }
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "height": 44,
                "opacity": 1,
                "width": 104.65116279069767,
              }
            }
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "backgroundColor": "transparent",
                  "borderColor": "#2089dc",
                  "borderRadius": 3,
                  "borderWidth": 0,
                  "flexDirection": "row",
                  "justifyContent": "center",
                  "padding": 8,
                }
              }
            >
              <View
                style={
                  Object {
                    "overflow": "hidden",
                  }
                }
              >
                <View>
                  <View
                    style={
                      Object {
                        "alignItems": "center",
                        "backgroundColor": "transparent",
                        "justifyContent": "center",
                      }
                    }
                  >
                    <Text
                      allowFontScaling={false}
                      style={
                        Array [
                          Object {
                            "color": "#EB576A",
                            "fontSize": 48.83720930232558,
                          },
                          Object {
                            "backgroundColor": "transparent",
                          },
                          Object {
                            "fontFamily": "Material Design Icons",
                            "fontStyle": "normal",
                            "fontWeight": "normal",
                          },
                          Object {},
                        ]
                      }
                      testID="iconIcon"
                    >
                      󰍜
                    </Text>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
        <Text
          accessibilityRole="header"
          numberOfLines={1}
          style={
            Object {
              "alignSelf": "center",
              "color": "#1F2532",
              "fontFamily": "IBMPlexSans",
              "fontSize": 30,
              "lineHeight": 39.375,
              "marginBottom": 8.720930232558139,
              "marginTop": -26.162790697674417,
              "position": "relative",
              "textAlign": "center",
              "width": "100%",
            }
          }
        />
      </View>
    </View>
    <View
      style={
        Object {
          "flex": 1,
          "flexDirection": "column",
          "justifyContent": "flex-end",
          "left": 0,
          "position": "absolute",
          "top": 0,
        }
      }
    >
      <Image
        resizeMode="cover"
        source={
          Object {
            "testUri": "../../../src/assets/images/defaultLogoBackground.png",
          }
        }
        style={
          Object {
            "height": 354.06976744186045,
            "width": 750,
          }
        }
      />
    </View>
    <View
      style={
        Object {
          "flex": 1,
          "flexDirection": "column",
          "justifyContent": "flex-end",
        }
      }
    >
      <Image
        resizeMode="contain"
        source={
          Object {
            "testUri": "../../../src/assets/images/defaultLogo.png",
          }
        }
        style={
          Object {
            "alignSelf": "center",
            "bottom": 13.081395348837209,
            "maxHeight": 308.781773931855,
            "maxWidth": 650,
            "position": "relative",
          }
        }
      />
    </View>
  </View>
  <View />
  <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "column",
        "width": "100%",
      }
    }
  >
    <RCTScrollView
      automaticallyAdjustContentInsets={false}
      contentContainerStyle={
        Object {
          "flexGrow": 1,
        }
      }
      contentData={
        <View
          style={
            Object {
              "backgroundColor": "#F8F9FA",
              "flex": 1,
              "flexDirection": "column",
            }
          }
        >
          <View />
          <View
            style={
              Object {
                "flex": 1,
                "height": "100%",
                "justifyContent": "flex-end",
                "marginBottom": 36,
                "marginTop": 20,
              }
            }
          />
        </View>
      }
      contentInset={
        Object {
          "bottom": 0,
        }
      }
      enableAutomaticScroll={true}
      enableOnAndroid={true}
      enableResetScrollToCoords={true}
      extraHeight={75}
      extraScrollHeight={100}
      getScrollResponder={[Function]}
      handleOnScroll={[Function]}
      innerRef={[Function]}
      keyboardDismissMode="interactive"
      keyboardOpeningTime={250}
      keyboardSpace={0}
      onScroll={[Function]}
      resetKeyboardSpace={[Function]}
      scrollEventThrottle={1}
      scrollForExtraHeightOnAndroid={[Function]}
      scrollIntoView={[Function]}
      scrollToEnd={[Function]}
      scrollToFocusedInput={[Function]}
      scrollToPosition={[Function]}
      showsVerticalScrollIndicator={true}
      style={
        Object {
          "flex": 1,
          "flexDirection": "column",
          "width": "100%",
        }
      }
      update={[Function]}
      viewIsInsideTabBar={false}
    >
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#F8F9FA",
              "flex": 1,
              "flexDirection": "column",
            }
          }
        >
          <View />
          <View
            style={
              Object {
                "flex": 1,
                "height": "100%",
                "justifyContent": "flex-end",
                "marginBottom": 36,
                "marginTop": 20,
              }
            }
          />
        </View>
      </View>
    </RCTScrollView>
  </View>
</View>
`;
